force-app/main/default/objects/Wealth_Asset__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Valuation</fullName>
            </value>
            <value>
                <fullName>Luxury Items</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Salary Estimate</fullName>
            </value>
            <value>
                <fullName>Stock/Options</fullName>
            </value>
            <value>
                <fullName>Foundation Assets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>