force-app/main/default/objects/Wealth_Asset__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Art/Rare Collectibles</fullName>
                <isActive>false</isActive>
                <label>Art/Rare Collectibles</label>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
                <isActive>false</isActive>
                <label>Commercial Property</label>
            </value>
            <value>
                <fullName>Helicopter</fullName>
                <isActive>false</isActive>
                <label>Helicopter</label>
            </value>
            <value>
                <fullName>Luxury Car</fullName>
                <isActive>false</isActive>
                <label>Luxury Car</label>
            </value>
            <value>
                <fullName>Private Island</fullName>
                <isActive>false</isActive>
                <label>Private Island</label>
            </value>
            <value>
                <fullName>Private Jet</fullName>
                <isActive>false</isActive>
                <label>Private Jet</label>
            </value>
            <value>
                <fullName>Residential Property</fullName>
                <isActive>false</isActive>
                <label>Residential Property</label>
            </value>
            <value>
                <fullName>Yacht</fullName>
                <isActive>false</isActive>
                <label>Yacht</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>