force-app/main/default/objects/Wealth_Asset__c/fields/Number_of_Officers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Officers__c</fullName>
    <inlineHelpText>Please include the 990 Year, Number of Officers, Total Assets and Total Grants Paid when the Category is Family Foundation Assets.</inlineHelpText>
    <label>Number of Officers</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>