force-app/main/default/objects/Wealth_Asset__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wealth Assets</relationshipLabel>
    <relationshipName>Wealth_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>