force-app/main/default/objects/Wealth_Asset__c/fields/Ownership_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Effective_Date__c</fullName>
    <label>Ownership Effective Date</label>
    <type>Date</type>
</CustomField>