force-app/main/default/objects/Wealth_Asset__c/fields/X990_Year__c.field-meta.xml
<CustomField>
    <fullName>X990_Year__c</fullName>
    <inlineHelpText>Please include the 990 Year, Number of Officers, Total Assets and Total Grants Paid when the Category is Family Foundation Assets.</inlineHelpText>
    <label>990 Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>