force-app/main/default/objects/Wealth_Asset__c/validationRules/Required_Fields_Family_Foundation_Assets.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Family_Foundation_Assets</fullName>
    <active>true</active>
    <description>Validation to require the 990 Year, Number of Officers, Total Assets, and Total Grants Paid fields the Category is Foundation Assets</description>
    <errorConditionFormula>ISPICKVAL(Category__c , &quot;Foundation Assets&quot;)
&amp;&amp;
OR(
ISBLANK( X990_Year__c ),
ISBLANK( Total_Assets__c),
ISBLANK( Number_of_Officers__c),
ISBLANK( Total_Grants_Paid__c)
)</errorConditionFormula>
    <errorDisplayField>X990_Year__c</errorDisplayField>
    <errorMessage>The 990 Year, Number of Officers, Total Assets, and Total Grants Paid fields are required if the Category is Foundation Assets.</errorMessage>
</ValidationRule>