force-app/main/default/objects/Wealth_Asset__c/validationRules/Required_Fields_Luxury_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Luxury_Item</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Category__c , &quot;Luxury Items&quot;)
&amp;&amp;
ISPICKVAL(Item__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Item__c</errorDisplayField>
    <errorMessage>For a Category of Luxury Items, an Item must be entered.</errorMessage>
</ValidationRule>