force-app/main/default/objects/Wealth_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Estimated_Value__c</columns>
    <columns>Constituent__c</columns>
    <columns>Value_Evaluation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>